# CounterFactual

./: .gitignore  ANNinJulia.jl  ANNinPyomo.py  ANNmodel_weights_new.pth  ANNusingPytorch.py  GSE124872_Angelidis_2018_metadata.csv  Manifest.toml  Project.toml  README.md  cf_sweep.py  cf_sweep_julia.jl  convert_weights.jl  efficient_comparison.py  efficient_comparison_results.csv  pyproject.toml  run.py  test_data.npy  xpairs.npy
data/: ANNmodel_weights.pth  ANNmodel_weights_new.bson  genes.csv  test_data_new.npy
pySingleCellNet/: scn_assess.py  scn_train.py
