[project]
name = "counterfactual"
version = "0.1.0"
description = "Comparing the counterfactual explanation methods python vs julia"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.6",
    "omlt>=1.2.2",
    "pandas>=2.3.2",
    "scipy>=1.16.2",
    "seaborn>=0.13.2",
    "torch>=2.8.0",
]
